--- a/app/src/main/res/layout/fragment_hike.xml
+++ b/app/src/main/res/layout/fragment_hike.xml
@@ -455,6 +455,17 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/observationArea"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/durationInputLayout">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
             <Button
                 android:id="@+id/saveBtn"
                 android:layout_width="140dp"
@@ -467,7 +478,7 @@
                 android:textStyle="bold"
                 android:text="@string/save"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/durationInputLayout" />
+                app:layout_constraintTop_toBottomOf="@id/observationArea" />
 
             <Button
                 android:id="@+id/cancelBtn"
@@ -481,7 +492,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/durationInputLayout" />
+                app:layout_constraintTop_toBottomOf="@id/observationArea" />
 
             <Button
                 android:id="@+id/observationBtn"
