--- a/app/src/main/res/layout/observation_input_layout.xml
+++ b/app/src/main/res/layout/observation_input_layout.xml
@@ -184,9 +184,7 @@
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:contentDescription="@string/observation"
-            android:src="@drawable/ic_baseline_add_photo"
-            android:tint="@color/white"
-            android:background="@color/lavender"/>
+            android:src="@drawable/ic_baseline_add_photo"/>
 
     </androidx.cardview.widget.CardView>
 
