--- a/app/src/main/res/layout/observation_added_image_layout.xml
+++ b/app/src/main/res/layout/observation_added_image_layout.xml
@@ -10,15 +10,32 @@
     android:layout_marginEnd="32dp"
     android:background="@drawable/round_shape">
 
-    <TextView
-        android:id="@+id/observationIdText"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/imageViewLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:layout_marginStart="5dp"
+        app:cardCornerRadius="8dp"
+        android:layout_marginVertical="5dp">
 
+        <ImageView
+            android:id="@+id/observationImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:contentDescription="@string/observation"
+            android:src="@drawable/test"/>
+
+        <TextView
+            android:id="@+id/observationIdText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+
+    </androidx.cardview.widget.CardView>
+    
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_weight="1">
 
@@ -28,10 +45,10 @@
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="28dp"
             android:layout_marginBottom="6dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:textColor="@color/white"/>
 
         <TextView
@@ -40,9 +57,8 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:layout_marginTop="6dp"
-            android:layout_marginBottom="12dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:textColor="@color/grey"/>
 
     </LinearLayout>
