--- a/app/src/main/res/layout/observation_input_layout.xml
+++ b/app/src/main/res/layout/observation_input_layout.xml
@@ -68,6 +68,7 @@
             android:id="@+id/dateInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:enabled="false"
             android:inputType="none"
             android:text=""
             android:textColorHint="@color/white" />
@@ -96,6 +97,7 @@
             android:id="@+id/timeInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:enabled="false"
             android:inputType="none"
             android:text=""
             android:textColorHint="@color/white" />
@@ -161,9 +163,8 @@
             android:id="@+id/commentInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="none"
-            android:textColorHint="@color/white"
-            android:text=""/>
+            android:inputType="text|textCapSentences|textMultiLine"
+            android:textColorHint="@color/white" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -184,6 +185,7 @@
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:contentDescription="@string/observation"
+            android:background="@color/white"
             android:src="@drawable/ic_baseline_add_photo"/>
 
     </androidx.cardview.widget.CardView>
