--- a/app/src/main/res/layout/observation_added_image_layout.xml
+++ b/app/src/main/res/layout/observation_added_image_layout.xml
@@ -8,7 +8,8 @@
     android:layout_marginBottom="6dp"
     android:layout_marginStart="32dp"
     android:layout_marginEnd="32dp"
-    android:background="@drawable/round_shape">
+    android:background="@drawable/round_shape"
+    android:id="@+id/observationBackground">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/imageViewLayout"
