--- a/app/src/main/res/layout/observation_added_layout.xml
+++ b/app/src/main/res/layout/observation_added_layout.xml
@@ -41,10 +41,22 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:layout_marginTop="6dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="6dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:textColor="@color/grey"/>
+
+        <TextView
+            android:id="@+id/observationLocation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="12dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:textColor="@color/grey"
+            android:maxLines="2"/>
 
     </LinearLayout>
 
